Fixed long text not wrapped into new lines.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,3 +1,8 @@
+.panel-default {
+  word-break:break-all; /*Allow long text to be wrapped into new line*/
+}
+
+/*Like Button*/
 .btn.btn-success {
   /*-webkit-border-radius: 0;
   -moz-border-radius: 0;
@@ -18,6 +23,7 @@
   background: #3cb0fd;
 }
 
+/*Dislike Button*/
 .btn.btn-danger {
   /*-webkit-border-radius: 0;
   -moz-border-radius: 0;
